added install file

--- a/.hgrc
+++ b/.hgrc
@@ -3,6 +3,7 @@ username = Vytautas Gimbutas
 merge = diffmerge
 
 [extensions]
+hgext.ftp = /usr/lib/hg/ftp.py
 hgext.purge = 
 hgext.graphlog =
 hgext.extdiff =
