--- a/.pythonrc
+++ b/.pythonrc
@@ -1,28 +1,6 @@
-# This came from Greg V's dotfiles:
-#      https://github.com/myfreeweb/dotfiles
-# Feel free to steal it, but attribution is nice
-
 import inspect
 import sys
 import os
-home = os.environ["HOME"]
+import base64
 
-try:
-    from see import see
-except ImportError:
-    print >>sys.stderr, "Please pip install see"
-
-if "DJANGO_SETTINGS_MODULE" in os.environ:
-    from django.db.models.loading import get_models
-    from django.test.client import Client
-    from django.test.utils import setup_test_environment, teardown_test_environment
-    from django.conf import settings as S
-
-    class DjangoModels(object):
-        """Loop through all the models in INSTALLED_APPS and import them."""
-        def __init__(self):
-            for m in get_models():
-                setattr(self, m.__name__, m)
-
-    M = DjangoModels()
-    C = Client()
+from see import see
