--- a/config/php-fpm.conf
+++ b/config/php-fpm.conf
@@ -3,7 +3,7 @@
 ;;;;;;;;;;;;;;;;;;;;;
 
 ; All relative paths in this configuration file are relative to PHP's install
-; prefix (/usr/local/Cellar/php/5.4.0). This prefix can be dynamicaly changed by using the
+; prefix (/usr/local/Cellar/php54/5.4.4). This prefix can be dynamicaly changed by using the
 ; '-p' argument from the command line.
 
 ; Include one or more files. If glob(3) exists, it is used to include a bunch of
@@ -11,8 +11,8 @@
 ; file.
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p arguement)
-;  - /usr/local/Cellar/php/5.4.0 otherwise
-;include=etc/fpm.d/*.conf
+;  - /usr/local/Cellar/php54/5.4.4 otherwise
+;include=/usr/local/etc/php/5.4/fpm.d/*.conf
 
 ;;;;;;;;;;;;;;;;;;
 ; Global Options ;
@@ -20,16 +20,16 @@
 
 [global]
 ; Pid file
-; Note: the default prefix is /usr/local/Cellar/php/5.4.0/var
+; Note: the default prefix is /usr/local/var
 ; Default Value: none
-pid = /usr/local/var/run/php-fpm.pid
+;pid = run/php-fpm.pid
 
 ; Error log file
 ; If it's set to "syslog", log is sent to syslogd instead of being written
 ; in a local file.
-; Note: the default prefix is /usr/local/Cellar/php/5.4.0/var
+; Note: the default prefix is /usr/local/var
 ; Default Value: log/php-fpm.log
-error_log = /usr/local/var/log/php-fpm.log
+;error_log = log/php-fpm.log
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
@@ -121,7 +121,7 @@ daemonize = true
 ; - 'chdir'
 ; - 'php_values'
 ; - 'php_admin_values'
-; When not set, the global prefix (or /usr/local/Cellar/php/5.4.0) applies instead.
+; When not set, the global prefix (or /usr/local/Cellar/php54/5.4.4) applies instead.
 ; Note: This directive can also be relative to the global prefix.
 ; Default Value: none
 ;prefix = /path/to/pools/$pool
@@ -151,8 +151,8 @@ listen = 127.0.0.1:9000
 ; BSD-derived systems allow connections regardless of permissions. 
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0666
-;listen.owner = nobody
-;listen.group = nobody
+;listen.owner = _www
+;listen.group = _www
 ;listen.mode = 0666
  
 ; List of ipv4 addresses of FastCGI clients which are allowed to connect.
@@ -483,7 +483,7 @@ pm.max_spare_servers = 35
 ; instead.
 
 ; Note: path INI options can be relative and will be expanded with the prefix
-; (pool, global or /usr/local/Cellar/php/5.4.0)
+; (pool, global or /usr/local/Cellar/php54/5.4.4)
 
 ; Default Value: nothing is defined by default except the values in php.ini and
 ;                specified at startup with the -d argument
