--- a/config/php.ini
+++ b/config/php.ini
@@ -19,7 +19,7 @@
 ; See the PHP docs for more specific information.
 ; http://php.net/configuration.file
 
-; The syntax of the file is extremely simple.  Whitespace and Lines
+; The syntax of the file is extremely simple.  Whitespace and lines
 ; beginning with a semicolon are silently ignored (as you probably guessed).
 ; Section headers (e.g. [Foo]) are also silently ignored, even though
 ; they might mean something in the future.
@@ -458,7 +458,7 @@ memory_limit = 512M
 ; Development Value: E_ALL
 ; Production Value: E_ALL & ~E_DEPRECATED & ~E_STRICT
 ; http://php.net/error-reporting
-error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
+error_reporting = E_ALL
 
 ; This directive controls whether or not and where PHP will output errors,
 ; notices and warnings too. Error output is very useful during development, but
@@ -486,7 +486,7 @@ display_errors = On
 ; Development Value: On
 ; Production Value: Off
 ; http://php.net/display-startup-errors
-display_startup_errors = Off
+display_startup_errors = On
 
 ; Besides displaying errors, PHP can also log errors to locations such as a
 ; server-specific log, STDERR, or a location specified by the error_log
@@ -530,7 +530,7 @@ report_memleaks = On
 ; Development Value: On
 ; Production Value: Off
 ; http://php.net/track-errors
-track_errors = Off
+track_errors = On
 
 ; Turn off normal error reporting and emit XML-RPC error XML
 ; http://php.net/xmlrpc-errors
@@ -898,7 +898,6 @@ default_socket_timeout = 60
 
 ;extension=php_soap.dll
 ;extension=php_sockets.dll
-;extension=php_sqlite.dll
 ;extension=php_sqlite3.dll
 ;extension=php_sybase_ct.dll
 ;extension=php_tidy.dll
@@ -1220,7 +1219,7 @@ mysqlnd.collect_statistics = On
 ; Enable / Disable collection of memory usage statistics by mysqlnd which can be
 ; used to tune and monitor MySQL operations.
 ; http://php.net/mysqlnd.collect_memory_statistics
-mysqlnd.collect_memory_statistics = Off
+mysqlnd.collect_memory_statistics = On
 
 ; Size of a pre-allocated buffer used when sending commands to MySQL in bytes.
 ; http://php.net/mysqlnd.net_cmd_buffer_size
@@ -1489,7 +1488,7 @@ session.gc_maxlifetime = 1440
 ; Development Value: On
 ; Production Value: Off
 ; http://php.net/session.bug-compat-42
-session.bug_compat_42 = Off
+session.bug_compat_42 = On
 
 ; This setting controls whether or not you are warned by PHP when initializing a
 ; session value into the global space. session.bug_compat_42 must be enabled before
@@ -1498,7 +1497,7 @@ session.bug_compat_42 = Off
 ; Development Value: On
 ; Production Value: Off
 ; http://php.net/session.bug-compat-warn
-session.bug_compat_warn = Off
+session.bug_compat_warn = On
 
 ; Check HTTP Referer to invalidate externally stored URLs containing ids.
 ; HTTP_REFERER has to contain this substring for the session to be
@@ -1859,8 +1858,8 @@ ldap.max_links = -1
 ; tab-width: 4
 ; End:
 
-
-; custom
+;custom 
+zend_extension="/usr/local/Cellar/php54-xdebug/2.2.0/xdebug.so"
 xdebug.max_nesting_level=500
 xdebug.remote_host = 127.0.0.1
 xdebug.remote_enable = 1
@@ -1878,15 +1877,13 @@ xdebug.idekey=PHPSTORM
 xdebug.var_display_max_depth=10
 xdebug.cli_color=1
 
-
 [apc]
-extension="/usr/local/Cellar/apc-php/3.1.10/apc.so"
+extension="/usr/local/Cellar/php54-apc/3.1.10/apc.so"
 apc.enabled=1
 apc.shm_segments=1
 apc.shm_size=64M
 apc.ttl=7200
 apc.user_ttl=7200
 apc.num_files_hint=1024
-apc.mmap_file_mask=/tmp/apc.XXXXXX
-apc.enable_cli = 0
-
+    apc.mmap_file_mask=/tmp/apc.XXXXXX
+    apc.enable_cli=1
