--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,7 @@
     excludesfile = ~/.gitignore
     attributesfile = ~/.gitattributes
     whitespace = fix,space-before-tab,tab-in-indent,trailing-space
+	autocrlf = input
 
 [apply]
     whitespace = fix
@@ -13,10 +14,16 @@
 [merge]
 	tool = diffmerge
 [mergetool "diffmerge"]
-	cmd = diffmerge --merge--result=$MERGED $LOCAL $BASE $REMOTE
+	cmd = diffmerge --merge --result=$MERGED $LOCAL $BASE $REMOTE
 	trustExitCode = true
 [mergetool]
 	keepBackup = false
+
+[difftool] 
+    prompt = NO 
+    tool = diffmerge
+[difftool "diffmerge"] 
+    cmd = diffmerge "$LOCAL" "$REMOTE" # For DiffMerge
 
 [color]
 	ui = true
