--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,9 @@
-.DS_Store
+# IDE settings
 .idea
+
 .vim/backups
 .vim/.netrwhist
 .vim/bundle/mattn-gist-vim/doc/tags
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
 
 # OS generated files #
 ######################
@@ -40,4 +14,3 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
-
