--- a/config/php/php.ini
+++ b/config/php/php.ini
@@ -1,8 +1,14 @@
 date.timezone = Europe/Vilnius
+
+; opcache
 opcache.enabled = 1
 opcache.max_accelerated_files = 10000
 opcache.memory_consumption = 2048
 
+; xdebug
 xdebug.remote_enable = 1
 xdebug.idekey = "PHPSTORM"
 xdebug.max_nesting_level=500
+
+; extensions
+extension=stomp.so
