--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -381,6 +381,8 @@
 		<key>TB Is Shown</key>
 		<integer>1</integer>
 	</dict>
+        <key>NSWindow Frame NSFontPanel</key>
+        <string>929 110 445 103 0 0 1440 877 </string>
 	<key>NSWindow Frame Preferences</key>
 	<string>269 168 606 456 0 0 2560 1417 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
@@ -388,11 +390,11 @@
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>970 768 620 392 0 0 2560 1417 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>107 209 918 512 0 0 1440 877 </string>
+        <string>107 322 796 473 0 0 1440 877 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
-	<string>-2330 833 592 584 -2560 0 2560 1417 </string>
+        <string>99 293 592 584 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 393 1440 484 0 0 1440 877 </string>
+        <string>0 303 1440 574 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>8 922 570 475 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -969,7 +971,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>MesloLGS-RegularForPowerline 12</string>
+                        <string>MesloLGL-RegularForPowerline 12</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
@@ -1611,7 +1613,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>MesloLGS-RegularForPowerline 12</string>
+                        <string>MesloLGL-RegularForPowerline 12</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
@@ -1680,6 +1682,12 @@
 	</array>
 	<key>NoSyncInstallationId</key>
 	<string>DD4E7494-211D-44C0-B33B-4FCD88841A96</string>
+        <key>NoSyncNeverRemindPrefsChangesLostForFile</key>
+        <true/>
+        <key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
+        <integer>0</integer>
+        <key>NoSyncPermissionToShowTip</key>
+        <false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>491639869.33611798</real>
 	<key>PointerActions</key>
@@ -1716,7 +1724,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/evp/Dropbox</string>
+        <string>/Users/evp/dev/r/dotfiles</string>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedAlternateAppNameKey</key>
@@ -1726,7 +1734,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-08-01T11:20:46Z</date>
+        <date>2016-08-02T18:49:20Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1736,7 +1744,7 @@
 	<key>TabStyle</key>
 	<integer>1</integer>
 	<key>UKCrashReporterLastCrashReportDate</key>
-	<real>1470042496</real>
+        <real>1470163712</real>
 	<key>UseBorder</key>
 	<false/>
 	<key>WindowNumber</key>
