--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -382,27 +382,31 @@
 		<integer>1</integer>
 	</dict>
         <key>NSWindow Frame NSFontPanel</key>
-        <string>929 110 445 103 0 0 1440 877 </string>
+        <string>929 37 445 77 0 0 1440 877 </string>
 	<key>NSWindow Frame Preferences</key>
 	<string>269 168 606 456 0 0 2560 1417 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>438 294 400 129 0 0 1280 697 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>970 768 620 392 0 0 2560 1417 </string>
+        <string>970 769 620 392 0 0 2560 1417 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-        <string>107 322 796 473 0 0 1440 877 </string>
+        <string>107 195 937 512 0 0 1440 877 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
         <string>99 293 592 584 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-        <string>0 303 1440 574 0 0 1440 877 </string>
+        <string>-2560 3 1277 1414 -2560 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>8 922 570 475 0 0 2560 1417 </string>
+        <string>0 9 1277 863 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>683 245 570 452 0 0 1280 697 </string>
+        <string>-2560 547 1263 863 -2560 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
 	<string>16 -97 570 452 0 0 1280 697 </string>
 	<key>NSWindow Frame iTerm Window 4</key>
 	<string>699 -118 570 452 0 0 1280 697 </string>
+        <key>NeverWarnAboutShortLivedSessions_CD8AC603-08B4-4262-B110-2D6274BC6AD2</key>
+        <true/>
+        <key>NeverWarnAboutShortLivedSessions_CD8AC603-08B4-4262-B110-2D6274BC6AD2_selection</key>
+        <integer>0</integer>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -1021,7 +1025,7 @@
 			<key>Transparency</key>
 			<real>0.0</real>
 			<key>Unlimited Scrollback</key>
-			<false/>
+                        <true/>
 			<key>Use Bold Font</key>
 			<true/>
 			<key>Use Bright Bold</key>
@@ -1661,7 +1665,7 @@
 			<key>Transparency</key>
 			<real>0.0</real>
 			<key>Unlimited Scrollback</key>
-			<false/>
+                        <true/>
 			<key>Use Bold Font</key>
 			<true/>
 			<key>Use Bright Bold</key>
@@ -1680,6 +1684,10 @@
 			<string>/Users/evp</string>
 		</dict>
 	</array>
+        <key>NoSyncDoNotWarnBeforeMultilinePaste</key>
+        <true/>
+        <key>NoSyncDoNotWarnBeforeMultilinePaste_selection</key>
+        <integer>0</integer>
 	<key>NoSyncInstallationId</key>
 	<string>DD4E7494-211D-44C0-B33B-4FCD88841A96</string>
         <key>NoSyncNeverRemindPrefsChangesLostForFile</key>
@@ -1734,7 +1742,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-        <date>2016-08-02T18:49:20Z</date>
+        <date>2016-09-05T08:34:00Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1754,7 +1762,7 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.0.5</string>
+        <string>3.0.7</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
 	<integer>0</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
