--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -348,9 +348,9 @@
 	<key>LoadPrefsFromCustomFolder</key>
 	<true/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Dropbox</string>
+        <string>~/dev/r/dotfiles</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
-	<string>{712, 448}</string>
+        <string>{712, 459}</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
@@ -382,27 +382,17 @@
 		<integer>1</integer>
 	</dict>
         <key>NSWindow Frame NSFontPanel</key>
-        <string>929 37 445 77 0 0 1440 877 </string>
-	<key>NSWindow Frame Preferences</key>
-	<string>269 168 606 456 0 0 2560 1417 </string>
-	<key>NSWindow Frame SUStatusFrame</key>
-	<string>438 294 400 129 0 0 1280 697 </string>
+        <string>700 81 655 251 0 0 1440 877 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-        <string>970 769 620 392 0 0 2560 1417 </string>
+        <string>410 364 620 392 0 0 1440 877 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-        <string>107 195 937 512 0 0 1440 877 </string>
+        <string>737 569 796 473 0 0 2560 1417 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
-        <string>99 293 592 584 0 0 1440 877 </string>
+        <string>0 437 592 372 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-        <string>-2560 3 1277 1414 -2560 0 2560 1417 </string>
+        <string>0 843 2560 574 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-        <string>0 9 1277 863 0 0 1440 877 </string>
-	<key>NSWindow Frame iTerm Window 2</key>
-        <string>-2560 547 1263 863 -2560 0 2560 1417 </string>
-	<key>NSWindow Frame iTerm Window 3</key>
-	<string>16 -97 570 452 0 0 1280 697 </string>
-	<key>NSWindow Frame iTerm Window 4</key>
-	<string>699 -118 570 452 0 0 1280 697 </string>
+        <string>723 356 570 521 0 0 1440 877 </string>
         <key>NeverWarnAboutShortLivedSessions_CD8AC603-08B4-4262-B110-2D6274BC6AD2</key>
         <true/>
         <key>NeverWarnAboutShortLivedSessions_CD8AC603-08B4-4262-B110-2D6274BC6AD2_selection</key>
@@ -1689,7 +1679,7 @@
         <key>NoSyncDoNotWarnBeforeMultilinePaste_selection</key>
         <integer>0</integer>
 	<key>NoSyncInstallationId</key>
-	<string>DD4E7494-211D-44C0-B33B-4FCD88841A96</string>
+        <string>9A32678F-956C-49A5-9960-A872D2F92E3D</string>
         <key>NoSyncNeverRemindPrefsChangesLostForFile</key>
         <true/>
         <key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
@@ -1697,7 +1687,9 @@
         <key>NoSyncPermissionToShowTip</key>
         <false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
-	<real>491639869.33611798</real>
+        <real>491853902.06914598</real>
+        <key>OnlyWhenMoreTabs</key>
+        <false/>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
@@ -1732,17 +1724,19 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-        <string>/Users/evp/dev/r/dotfiles</string>
+        <string>/Users/vytautasgimbutas/dev/r/dotfiles</string>
+        <key>PromptOnQuit</key>
+        <false/>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedAlternateAppNameKey</key>
 	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>https://iterm2.com/appcasts/final.xml?shard=69</string>
+        <string>https://iterm2.com/appcasts/final.xml?shard=56</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-        <date>2016-09-05T08:34:00Z</date>
+        <date>2016-09-29T18:57:40Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1752,7 +1746,7 @@
 	<key>TabStyle</key>
 	<integer>1</integer>
 	<key>UKCrashReporterLastCrashReportDate</key>
-        <real>1470163712</real>
+        <real>1471173632</real>
 	<key>UseBorder</key>
 	<false/>
 	<key>WindowNumber</key>
@@ -1762,7 +1756,7 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-        <string>3.0.7</string>
+        <string>3.0.9</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
 	<integer>0</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
