--- a/config/php/php.ini
+++ b/config/php/php.ini
@@ -11,4 +11,10 @@ xdebug.idekey = "PHPSTORM"
 xdebug.max_nesting_level=500
 
 ; extensions
-extension=stomp.so
+extension="imagick.so"
+extension="amqp.so"
+extension="igbinary.so"
+extension="apcu.so"
+extension="msgpack.so"
+extension="memcached.so"
+extension="redis.so"
