--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -1166,7 +1166,7 @@
 			<key>Window Type</key>
 			<integer>0</integer>
 			<key>Working Directory</key>
-			<string>/Users/evp</string>
+			<string>/Users/vytautasgimbutas</string>
 		</dict>
 		<dict>
 			<key>ASCII Anti Aliased</key>
@@ -1826,7 +1826,7 @@
 			<key>Window Type</key>
 			<integer>2</integer>
 			<key>Working Directory</key>
-			<string>/Users/evp</string>
+			<string>/Users/vytautasgimbutas</string>
 		</dict>
 	</array>
 	<key>NoSyncAllAppVersions</key>
