--- a/ansible-mac-dev-playbook-config.yml
+++ b/ansible-mac-dev-playbook-config.yml
@@ -78,6 +78,9 @@ homebrew_taps:
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
+  - devutils
+  - pitch
+  - spotify
   - guitar-pro
   - 1password
   - dropbox
