--- a/ansible-mac-dev-playbook-config.yml
+++ b/ansible-mac-dev-playbook-config.yml
@@ -124,6 +124,7 @@ homebrew_cask_apps:
   - balenaetcher
   - coconutbattery
   - adguard
+  - hiddenbar
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps:
